tests/negative/gold/import_export1_test.gold
tests/negative/import_export1_test.toit:8:3: error: Unresolved identifier: 'foo'
  foo  // Is a prefix in import_export1_a and should thus be unresolved, even though it's exported from import_export1_b
  ^~~
Compilation failed.
